# rust_chess_kd

./: Cargo.toml  index.html
pkg/: README.md  package.json  rust_chess.d.ts  rust_chess.js  rust_chess_bg.wasm  rust_chess_bg.wasm.d.ts
src/: bot.rs  constants.rs  game.rs  lib.rs  magic_tables.rs  main.rs  transposition_tables.rs
