[package]
name = "rust_chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
rand = "0.9.2"
once_cell = "1.19"
rayon = "1.8"

[profile.release]
debug = true

[profile.flamegraph]
inherits = "release"
# Full optimizations (opt-level 3) for loop unrolling and other optimizations
opt-level = 3
lto = false
codegen-units = 1
# Note: Inlining is disabled via RUSTFLAGS when running cargo flamegraph
