[package]
name = "rust_chess"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
fastrand = "2.0"
once_cell = "1.19"
rayon = "1.8"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "Performance",
  "Window",
  "console",
]

[profile.release]
debug = true

[profile.flamegraph]
inherits = "release"
# Full optimizations (opt-level 3) for loop unrolling and other optimizations
opt-level = 3
lto = false
codegen-units = 1
# Note: Inlining is disabled via RUSTFLAGS when running cargo flamegraph
